# fastapi_aula

./: pyproject.toml
tests/: test_app.py
